--- a/src/app/material/material-demo/material-demo.component.html
+++ b/src/app/material/material-demo/material-demo.component.html
@@ -1,3 +1,15 @@
 <p>
   material-demo works!
 </p>
+<mat-toolbar color="primary">
+  <button mat-icon-button >
+    <mat-icon>build</mat-icon>
+  </button>
+  <span>Wordks the Toolbar</span>
+
+</mat-toolbar>
+<a>
+  <button mat-button color="warn">
+    Home
+  </button>
+</a>
