--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
+<mat-toolbar color="primary">
+  <button mat-icon-button>
+    <mat-icon>build</mat-icon>
+  </button>
+  <span>Wordks the Toolbar</span>
+
+</mat-toolbar>
+<a>
+  <button mat-button color="warn">
+    Home
+  </button>
+</a>
 <router-outlet></router-outlet>
