--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,7 @@
-<p>
-  home works!
-</p>
+<mat-expansion-panel>
+  <mat-expansion-panel-header color="primary" >
+    <mat-panel-title>
+      Hello Wordl
+    </mat-panel-title>
+  </mat-expansion-panel-header>
+</mat-expansion-panel>
