--- a/src/app/material/material-button/material-button.component.html
+++ b/src/app/material/material-button/material-button.component.html
@@ -8,5 +8,7 @@
     </mat-panel-description>
 
   </mat-expansion-panel-header>
-  <button mat-button color="warn">Click Here!</button>
+  <button mat-button [disabled]="formulario.valida" color="primary">Click Here!</button>
+  <button mat-button (click)="onClicking()">Clicking</button>
+  <button mat-button (click)="onClickingEvent( $event )">Click with Event</button>
 </mat-expansion-panel>
