--- a/src/app/material/material-list/estudiantes/estudiantes.component.html
+++ b/src/app/material/material-list/estudiantes/estudiantes.component.html
@@ -1,4 +1,4 @@
-<mat-list-item>
+<mat-list-item (click)="onClick(Estudiante)">
   <img mat-line mat-list-avatar src="https://scontent.fbog4-1.fna.fbcdn.net/v/t1.0-9/16196015_10154888128487744_6901111466535510271_n.png?_nc_cat=103&oh=7a20122dd5acbd919e3c0fa790533a70&oe=5C5699E9"
     alt="Image-{{name}}">
   <span mat-line>{{Estudiante.name}}</span>
