--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,9 @@
 
 </mat-toolbar>
 <a>
-  <button mat-button color="primary">
+  <button mat-button color="primary" [routerLink]="'/home'">
     Home
   </button>
+  <button mat-button color="primary" [routerLink]="'/material-demo'">Material Demo</button>
 </a>
 <router-outlet></router-outlet>
