--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="card-container">
   <mat-card>
     <h3>Atronomy Picrure Of The Day</h3>
     <mat-card-header>
@@ -11,12 +11,10 @@
       
     </mat-card-header>
     <img mat-card-image [src]="apod.url" [alt]="apod.title">
-    <mat-card-content>
-      
-      <p>
-        {{apod.explanation}}
-    
-      </p>
-    </mat-card-content>
+    <mat-card-content>{{apod.explanation}}</mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" ><mat-icon >thumb_up</mat-icon>Like</button>
+      <button mat-button color="primary" ><mat-icon >share</mat-icon>Share</button>
+    </mat-card-actions>      
   </mat-card>
 </div>
