--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,9 +6,7 @@
       <mat-card-title>
         {{apod.title}}
       </mat-card-title>
-      <mat-card-subtitle>{{apod.date}}</mat-card-subtitle>
-      
-      
+      <mat-card-subtitle>{{apod.date | date }}</mat-card-subtitle>     
     </mat-card-header>
     <img mat-card-image [src]="apod.url" [alt]="apod.title">
     <mat-card-content>{{apod.explanation}}</mat-card-content>
@@ -16,5 +14,10 @@
       <button mat-button color="primary" ><mat-icon >thumb_up</mat-icon>Like</button>
       <button mat-button color="primary" ><mat-icon >share</mat-icon>Share</button>
     </mat-card-actions>      
+    <mat-card-footer>
+      <mat-card-subtitle>
+          <h3><span>&copy;</span>{{apod.copyright}}</h3>
+      </mat-card-subtitle>      
+    </mat-card-footer>
   </mat-card>
 </div>
