--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="card-container">
+<div class="card-container" *ngIf="apod">
   <mat-card>
     <h3>Atronomy Picrure Of The Day</h3>
     <mat-card-header>
