--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,9 @@
 
 </mat-toolbar>
 <a>
-  <button mat-button color="primary" [routerLink]="'/home'">
-    Home
-  </button>
+  <button mat-button color="primary" [routerLink]="'/home'">Home</button>
   <button mat-button color="primary" [routerLink]="'/material-demo'">Material Demo</button>
+  <button mat-button color="primary" [routerLink]="'/mars'">Mars</button>
 </a>
+
 <router-outlet></router-outlet>
